--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ include_directories(  ${catkin_INCLUDE_DIRS})
 
 add_library(seed_solutions_sdk
   src/seed3_command.cpp
+  src/aero3_command.cpp
   )
 target_link_libraries(seed_solutions_sdk ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 add_dependencies(seed_solutions_sdk ${catkin_EXPORTED_TARGETS})
